Update course announcement image in index.html: Replaced the promotional image for the UK & US Tax & Accounting Expert Course with a new course announcement image for improved relevance.

--- a/index.html
+++ b/index.html
@@ -2552,7 +2552,7 @@
                 "
               >
                 <img
-                  src="assets/images/uk-us-tax-promo.jpeg"
+                  src="assets/images/new course announcement.jpeg"
                   alt="UK & US Tax & Accounting Expert Course - CCGE"
                   style="
                     width: 100%;
